# Orolexa_backend

./: .dockerignore  .env.example  API_DOCUMENTATION.md  Dockerfile  ESP32_API_DOCUMENTATION.md  ESP32_STREAMING_README.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_SUMMARY.md  README.md  debug_registration.py  deploy.sh  docker-compose.yml  env.production.example  migrate_database.py  pyproject.toml  pytest.ini  railway-deploy.md  railway.json  requirements.txt  streaming_test.html
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_baseline.py
app/: __init__.py  analysis.py  appointments.py  auth.py  auth_production.py  config.py  database.py  db.py  devices.py  doctors.py  exceptions.py  health_analytics.py  image_storage.py  main.py  media_utils.py  middleware.py  migrations.py  models.py  notifications.py  orolexa.db  production_config.py  schemas.py  settings.py  storage.py  streaming.py  utils.py
app/application/: __init__.py
app/application/ports/: __init__.py  ai_provider.py  analysis_repo.py  appointments_repo.py  audit_logger.py  image_repo.py  otp_provider.py  rate_limiter.py  session_repo.py  storage_repo.py  user_repo.py
app/application/services/: __init__.py  analysis_service.py  appointments_service.py  auth_service.py  image_service.py  profile_service.py
app/controllers/: __init__.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py
app/db/models/auth/: otp.py
app/db/models/health/: analysis.py  appointment.py  device.py  doctor.py  notification.py
app/db/models/media/: image.py
app/db/models/users/: session.py  settings.py  user.py
app/infrastructure/: __init__.py
app/infrastructure/ai/: gemini_provider.py
app/infrastructure/audit/: std_logger.py
app/infrastructure/otp/: __init__.py  twilio_provider.py
app/infrastructure/persistence/: __init__.py
app/infrastructure/persistence/sqlalchemy/: __init__.py
app/infrastructure/persistence/sqlalchemy/repositories/: __init__.py  analysis_repository_sql.py  appointments_repository_sql.py  image_repository_sql.py  session_repository_sql.py  user_repository_sql.py
app/infrastructure/rate_limit/: memory_rate_limiter.py  redis_rate_limiter.py
app/infrastructure/storage/: local_storage.py
app/interface/: __init__.py  exceptions.py  middleware.py
app/models/: __init__.py  models.py  schemas.py
app/persistence/: __init__.py  database.py
app/routers/: __init__.py  analysis_router.py  appointments_router.py  auth_router.py  auth_router_impl.py  devices_router.py  doctors_router.py  health_analytics_router.py  notifications_router.py  settings_router.py
app/schemas/: __init__.py
app/schemas/analysis/: analysis.py
app/schemas/appointments/: appointment.py
app/schemas/auth/: auth.py
app/schemas/common/: common.py
app/schemas/devices/: device.py
app/schemas/doctors/: doctor.py
app/schemas/notifications/: notification.py
app/schemas/settings/: settings.py
app/schemas/users/: user.py
app/services/: __init__.py
app/services/ai/: ai_service.py
app/services/analysis/: analysis_service.py
app/services/appointments/: appointment_service.py
app/services/auth/: __init__.py  auth_service.py  firebase_service.py  otp_service.py
app/services/devices/: device_service.py
app/services/doctors/: doctor_service.py
app/services/notifications/: notification_service.py
app/services/rate_limit/: rate_limit_service.py
app/services/settings/: settings_service.py
app/services/storage/: __init__.py  compat.py  storage_service.py
app/services/users/: user_service.py
app/shared/: __init__.py  image_storage.py  media_utils.py  storage.py
tests/: test_analysis_service.py  test_appointments_service.py  test_auth_service.py  test_profile_service.py  test_rate_limiter.py
